# tiny_future-rust

./: .gitignore  Cargo.toml  LICENSE BSD 2-CLAUSE.md  LICENSE BSD-2-CLAUSE.md  README.md
src/: future.rs  lib.rs
tests/: future.rs
