[package]
name = "tiny_future"
version = "0.4.0"
authors = ["KizzyCode Software Labs./Keziah Biermann <development@kizzycode.de>"]
description = "This library provides spin-loop-free futures and a helper functions to run a job asynchronously"
license = "BSD-2-Clause OR MIT"
repository = "https://github.com/KizzyCode/tiny_future"
readme = "README.md"
edition = "2018"