[package]
name = "tiny_future"
version = "0.5.1"
edition = "2021"
authors = ["KizzyCode Software Labs./Keziah Biermann <development@kizzycode.de>"]
keywords = []
categories = []
description = "This library provides a simple, `Condvar` based future with automatic cancellation on drop"
license = "BSD-2-Clause OR MIT"
repository = "https://github.com/KizzyCode/tiny_future-rust"
readme = "README.md"


[badges]
appveyor = { repository = "KizzyCode/tiny_future-rust" }


[features]
default = []


[dependencies]


[profile.release]
overflow-checks = true

[profile.bench]
overflow-checks = true
